[bug]Fix the font size too big issue.
GitOrigin-RevId: cf9514e244d4cae7089b673b20ca7881bf8e25b0

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
   height: 710px;
 }
 
+
 .default-list .cell-category {
   display: inline-block;
   font-weight: bold;
@@ -146,7 +147,7 @@ div.container_hidden {
 }
 
 #testsuites {
-  max-width: 85%;
+  max-width: 95%;
 }
 
 #testsuites span {
@@ -182,7 +183,7 @@ div.container_hidden {
 }
 
 #output {
-  height: 210px;
+  height: 200px;
   width: 502px;
   overflow: hidden;
   color: #369;
@@ -265,4 +266,36 @@ span:focus {
   animation: blink 1s infinite alternate;
   width: 420px;
   height: 210px;
+}
+
+
+@media screen and (min-height: 720px) and (max-height: 721px) {
+  body {
+    font-size: 0.64em!important;
+    width: 1240px!important;
+  }
+  #output {
+    height: 200px;
+    width: 502px;
+  }
+}
+@media screen and (min-height: 1080px) and (max-height: 1081px) {
+  body {
+    font-size: 0.96em!important;
+    width: 1860px!important;
+  }
+  #output {
+    height: 300px;
+    width: 700px;
+  }
+}
+@media screen and (min-height: 2160px) and (max-height: 2161px) {
+  body {
+    font-size: 1.92em!important;
+    width: 3720px!important;
+  }
+  #output {
+    height: 600px;
+    width: 1400px;
+  }
 }
